--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "server": "json-server --watch db.json --port 5000"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -47,6 +46,7 @@
     ]
   },
   "devDependencies": {
+    "@types/uuid": "^8.3.4",
     "json-server": "^0.17.0"
   }
 }
